@@ -1,3 +1,10 @@
+2007-08-24  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_dirread.c: Add runtime error for fields for which no definition
+	is found (in addition to an assert for developers) in 
+	TIFFFetchNormalTag().  Not sure if this is needed, but it seems 
+	prudent.
+
 2007-08-10  Joris Van Damme  <joris.at.lebbeke@skynet.be>
 
 	* libtiff/tif_getimage.c: removed SubsamplingHor and SubsamplingVer 
